apps/jellyfin/httproute-local.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: jellyfin-local
  namespace: jellyfin
spec:
  hostnames:
    - jellyfin-local.whyredfire.dev
  parentRefs:
    - kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
      matches:
        - path:
            type: PathPrefix
            value: /
